# Advent-of-Code

./: CMakeLists.txt  LICENSE  README.md
aoc/: CMakeLists.txt  aoc.m.cpp
aoc/2020/: Advent of Code 2020, day 10.cpp  Advent of Code 2020, day 11.cpp  Advent of Code 2020, day 12.cpp  Advent of Code 2020, day 13.cpp  Advent of Code 2020, day 14.cpp  Advent of Code 2020, day 15.cpp  Advent of Code 2020, day 16.cpp  Advent of Code 2020, day 17.cpp  Advent of Code 2020, day 18.cpp  Advent of Code 2020, day 19.cpp  Advent of Code 2020, day 3.cpp  Advent of Code 2020, day 4.cpp  Advent of Code 2020, day 5.cpp  Advent of Code 2020, day 6.cpp  Advent of Code 2020, day 7.cpp  Advent of Code 2020, day 8.cpp  Advent of Code 2020, day 9.cpp
aoc/2021/: AoC_2021_01.hpp  CMakeLists.txt
aoc/2023/: AoC_2023_01.cpp  AoC_2023_01.hpp  CMakeLists.txt
cmake/: CompilerWarnings.cmake
